<resources>
    <string name="app_name">MVVMProjectTest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_stars">%d \nStars</string>
    <string name="text_watchers">%d \nWatchers</string>
    <string name="text_forks">%d \nForks</string>
    <string name="error_loading_repos">Oops, something went wrong</string>
    <string name="text_empty_repos">This account doesn\'t have any public repository</string>
    <string name="error_username_not_found">Oops, Octocat doesn\'t know that username</string>
    <string name="hit_username">GitHub username</string>
    <string name="default_info_message">Enter a GitHub username above to see its repositories</string>
    <string name="text_fork">This repository is a fork</string>
    <string name="text_language">Language: %s</string>
    <string name="singleBundle">单向绑定</string>
    <string name="doubleBundle">双向绑定</string>
    <string name="syn_vibrate">震动</string>
    <string name="syn_setting">设置信息</string>
    <string name="syn_cache">缓存</string>
    <string name="syn_cache_size">缓存大小</string>
    <string name="syn_voice">声音</string>
</resources>
